tests/baselines/reference/arrayOfSubtypeIsAssignableToReadonlyArray.errors.txt
tests/cases/compiler/arrayOfSubtypeIsAssignableToReadonlyArray.ts(13,1): error TS2322: Type 'A[]' is not assignable to type 'ReadonlyArray<B>'.
  Types of property 'every' are incompatible.
    Type '{ (callbackfn: (this: void, value: A, index: number, array: A[]) => boolean): boolean; (callbackfn: (this: void, value: A, index: number, array: A[]) => boolean, thisArg: undefined): boolean; <Z>(callbackfn: (this: Z, value: A, index: number, array: A[]) => boolean, thisArg: Z): boolean; }' is not assignable to type '{ (callbackfn: (this: void, value: B, index: number, array: ReadonlyArray<B>) => boolean): boolean; (callbackfn: (this: void, value: B, index: number, array: ReadonlyArray<B>) => boolean, thisArg: undefined): boolean; <Z>(callbackfn: (this: Z, value: B, index: number, array: ReadonlyArray<B>) => boolean, thisArg: Z): boolean; }'.
      Types of parameters 'callbackfn' and 'callbackfn' are incompatible.
        Types of parameters 'value' and 'value' are incompatible.
          Type 'A' is not assignable to type 'B'.
            Property 'b' is missing in type 'A'.
tests/cases/compiler/arrayOfSubtypeIsAssignableToReadonlyArray.ts(18,1): error TS2322: Type 'C<A>' is not assignable to type 'ReadonlyArray<B>'.
  Types of property 'every' are incompatible.
    Type '{ (callbackfn: (this: void, value: A, index: number, array: A[]) => boolean): boolean; (callbackfn: (this: void, value: A, index: number, array: A[]) => boolean, thisArg: undefined): boolean; <Z>(callbackfn: (this: Z, value: A, index: number, array: A[]) => boolean, thisArg: Z): boolean; }' is not assignable to type '{ (callbackfn: (this: void, value: B, index: number, array: ReadonlyArray<B>) => boolean): boolean; (callbackfn: (this: void, value: B, index: number, array: ReadonlyArray<B>) => boolean, thisArg: undefined): boolean; <Z>(callbackfn: (this: Z, value: B, index: number, array: ReadonlyArray<B>) => boolean, thisArg: Z): boolean; }'.
      Types of parameters 'callbackfn' and 'callbackfn' are incompatible.
        Types of parameters 'value' and 'value' are incompatible.
          Type 'A' is not assignable to type 'B'.


==== tests/cases/compiler/arrayOfSubtypeIsAssignableToReadonlyArray.ts (2 errors) ====
    class A { a }
    class B extends A { b }
    class C<T> extends Array<T> { c }
    declare var ara: A[];
    declare var arb: B[];
    declare var cra: C<A>;
    declare var crb: C<B>;
    declare var rra: ReadonlyArray<A>;
    declare var rrb: ReadonlyArray<B>;
    rra = ara;
    rrb = arb; // OK, Array<B> is assignable to ReadonlyArray<A>
    rra = arb;
    rrb = ara; // error: 'A' is not assignable to 'B'
    ~~~
!!! error TS2322: Type 'A[]' is not assignable to type 'ReadonlyArray<B>'.
!!! error TS2322:   Types of property 'every' are incompatible.
!!! error TS2322:     Type '{ (callbackfn: (this: void, value: A, index: number, array: A[]) => boolean): boolean; (callbackfn: (this: void, value: A, index: number, array: A[]) => boolean, thisArg: undefined): boolean; <Z>(callbackfn: (this: Z, value: A, index: number, array: A[]) => boolean, thisArg: Z): boolean; }' is not assignable to type '{ (callbackfn: (this: void, value: B, index: number, array: ReadonlyArray<B>) => boolean): boolean; (callbackfn: (this: void, value: B, index: number, array: ReadonlyArray<B>) => boolean, thisArg: undefined): boolean; <Z>(callbackfn: (this: Z, value: B, index: number, array: ReadonlyArray<B>) => boolean, thisArg: Z): boolean; }'.
!!! error TS2322:       Types of parameters 'callbackfn' and 'callbackfn' are incompatible.
!!! error TS2322:         Types of parameters 'value' and 'value' are incompatible.
!!! error TS2322:           Type 'A' is not assignable to type 'B'.
!!! error TS2322:             Property 'b' is missing in type 'A'.
    
    rra = cra;
    rra = crb; // OK, C<B> is assignable to ReadonlyArray<A>
    rrb = crb;
    rrb = cra; // error: 'A' is not assignable to 'B'
    ~~~
!!! error TS2322: Type 'C<A>' is not assignable to type 'ReadonlyArray<B>'.
!!! error TS2322:   Types of property 'every' are incompatible.
!!! error TS2322:     Type '{ (callbackfn: (this: void, value: A, index: number, array: A[]) => boolean): boolean; (callbackfn: (this: void, value: A, index: number, array: A[]) => boolean, thisArg: undefined): boolean; <Z>(callbackfn: (this: Z, value: A, index: number, array: A[]) => boolean, thisArg: Z): boolean; }' is not assignable to type '{ (callbackfn: (this: void, value: B, index: number, array: ReadonlyArray<B>) => boolean): boolean; (callbackfn: (this: void, value: B, index: number, array: ReadonlyArray<B>) => boolean, thisArg: undefined): boolean; <Z>(callbackfn: (this: Z, value: B, index: number, array: ReadonlyArray<B>) => boolean, thisArg: Z): boolean; }'.
!!! error TS2322:       Types of parameters 'callbackfn' and 'callbackfn' are incompatible.
!!! error TS2322:         Types of parameters 'value' and 'value' are incompatible.
!!! error TS2322:           Type 'A' is not assignable to type 'B'.
    